[package]
name = "testcase-generator"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
faker = ["dep:fake"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
rand = { version = "0.8", features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js"] }
serde-wasm-bindgen = "0.6"
fake = { version = "3", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
